--- a/src/app/modules/tourists/components/edit-profile/edit-profile.component.html
+++ b/src/app/modules/tourists/components/edit-profile/edit-profile.component.html
@@ -5,16 +5,16 @@
         </div>
     </div>
     <hr class="mt-0">
-    <div class="row card-body">
+    <div class="row font card-body">
         <div class="col-md-3">
             <h4 style="color: rgb(3, 168, 244)">Personal Info</h4>
         </div>
         <div class="col-md-9">
             <div class="row">
-                <div class="col-md-11">
+                <div class="col-10 col-md-11">
                     <h5 style="color: rgba(3, 169, 244, 0.7)">{{userData.name}}</h5>
                 </div>
-                <div class="col-md-1 edit-btn">
+                <div class="col-2 col-md-1 edit-btn">
                     <a (click)="editpersonal.show()">
                         <mdb-icon fas icon="edit"></mdb-icon>
                     </a>
@@ -23,22 +23,22 @@
             </div>
 
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-6">
                     <b style="color: rgba(3, 169, 244, 0.7)">Nationality </b>
                     <div>{{userData.nationality}}</div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-6">
                     <b style="color: rgba(3, 169, 244, 0.7)">Date of birth </b>
                     <div>{{userData.dob | date: 'dd-MM-yyyy'}}</div>
                 </div>
 
             </div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-6">
                     <b style="color: rgba(3, 169, 244, 0.7)">Email </b>
                     <div> {{userData.email}}</div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-6">
                     <b style="color: rgba(3, 169, 244, 0.7)"> Phone </b>
                     <div> {{userData.phoneNumber}}</div>
                 </div>
@@ -52,12 +52,12 @@
         <div class="col-md-3">
             <h4 style="color: rgb(255, 153, 0) ">Interests</h4>
         </div>
-        <div class="col-md-9">
-            <div class="row" *ngFor="let item of userData.interests" style="border-bottom: 1px solid gray;">
-                <div class="col-md-10">
+        <div class="col-md-9 font">
+            <div class="row mb-2" *ngFor="let item of userData.interests">
+                <div class="col-10">
                     <b style="color: rgba(255, 152, 0, 0.7) ">{{item}}</b>
                 </div>
-                <div class="col-md-2">
+                <div class="col-2">
                     <a (click)="removeInterests(item)" class="float-right">
                         <mdb-icon fas icon="trash-alt" class="red-text pr-3"></mdb-icon>
                     </a>
