--- a/src/app/shared/components/change-password/change-password.component.html
+++ b/src/app/shared/components/change-password/change-password.component.html
@@ -8,25 +8,25 @@
                 <form [formGroup]="changePwd" (ngSubmit)="submitForm()">
                     <div class=" card-body">
                         <div class="card-title">
-                            <h2><b>Change Password</b></h2>
+                            <h2 class="mb-5"><b>Change Password</b></h2>
                         </div>
-                        <div class="md-form">
+                        <div class="form-group mb-4">
                             <mdb-icon fas icon="lock" class="prefix"></mdb-icon>
                             <label for="first">Current Password</label>
-                            <input mdbInput type="password" id="first" formControlName="oldPassword" class="form-control">
+                            <input  type="password" id="first" formControlName="oldPassword" class="form-control">
 
                         </div>
-                        <div class="md-form">
+                        <div class="form-group mb-4">
                             <mdb-icon fas icon="lock" class="prefix"></mdb-icon>
                             <label for="form2">New Password</label>
-                            <input mdbInput type="password" id="form2" formControlName="newPassword" class="form-control">
+                            <input type="password" id="form2" formControlName="newPassword" class="form-control">
 
                         </div>
 
-                        <div class="md-form">
+                        <div class="form-group mb-5">
                             <mdb-icon fas icon="lock" class="prefix"></mdb-icon>
                             <label for="form3">Confirm Password</label>
-                            <input mdbInput type="password" id="form3" formControlName="confirmPassword" class="form-control">
+                            <input type="password" id="form3" formControlName="confirmPassword" class="form-control">
 
                         </div>
 
