--- a/src/app/modules/guide/components/messages/messages.component.html
+++ b/src/app/modules/guide/components/messages/messages.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-12">
+    <div class="row px-0">
+        <div class="col-12 px-0">
             <router-outlet></router-outlet>
         </div>
     </div>
