--- a/src/app/shared/components/chats/chats.component.scss
+++ b/src/app/shared/components/chats/chats.component.scss
@@ -224,10 +224,10 @@
     padding: 0px !important;
     font-size: 15px;
   }
-body{
-  margin: 0;
-  padding: 0;
-}
+// body{
+//   margin: 0;
+//   padding: 0;
+// }
 .sendbox{
   display: flex;
 flex-direction: column;
